# ibm-bob-forge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  ONBOARDING.md  README.md  RISK_REGISTER.md  ROADMAP.md  SECURITY.md  SECURITY_NOTICE.md  ibmbobextrainfo.md  pyproject.toml  verify_bobshell.py
bob_sessions/: README.md  logs.json  session-2026-05-17T05-21-cf4494ac.json  session-2026-05-17T05-52-cf4494ac.json  task1_llm07.md  task2_onboarding.md  task3_risk_register.md
demo/: benchmark.py  benchmark_results.json  demo_report.txt  run_demo.sh
demo/output/: forge_sample_vulnerable_repo.yaml  forge_sample_vulnerable_repo_bobshell.jsonl
demo/sample_vulnerable_repo/: README.md  agent.py  app.py  config.py  requirements.txt
docs/: API.md  OWASP_MAPPING.md  USAGE.md
examples/ci_integration/: .gitlab-ci.yml  Jenkinsfile  README.md  pre-commit-hook.sh
examples/scan_langchain_app/: README.md  agent.py  expected_scan_output.txt  forge_scan_langchain_app.yaml  requirements.txt
examples/scan_openai_app/: README.md  app.py  expected_scan_output.txt  forge_scan_openai_app.yaml  requirements.txt
forge_output/atlas/: forge_atlas.yaml  forge_atlas_bobshell.jsonl
forge_output/citadel/: forge_citadel.yaml  forge_citadel_bobshell.jsonl
forge_output/forge/: forge_forge.yaml  forge_forge_bobshell.jsonl
src/: forge.py  test_forge.py
src/audit/: bobshell.py
src/cli/: __main__.py
src/forge_output/: forge_atlas.yaml  forge_atlas_bobshell.jsonl
submissions/: lablab_submission.md
tests/: conftest.py  test_audit.py  test_generator.py  test_scanner.py
(+15 files in other folders)
